# Python-Waveform-Generator

./: .gitignore  README.md  pyproject.toml
tests/: test_file_handler.py  test_generator.py  test_plotter.py
waveform_generator/: file_handler.py  generator.py  main.py  plotter.py
